<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">eztrip</string>

    <!-- 第三方登录 -->
    <string name="login_button_name">登录</string>
    <string name="auth_cancel">授权操作已取消</string>
    <string name="auth_error">用户名或密码错误，请重新输入</string>
    <string name="auth_complete">授权成功，正在跳转…</string>
    <string name="logining">使用%s帐号登录中…</string>
    <string name="userid_found">用户信息已存在，正在跳转登录操作…</string>
    <string name="action_settings">设置</string>
    <!--routemaker-->
    <string name="last_step">上一步</string>
    <string name="next_step">下一步</string>
    <string name="routemaker_basicsettings_hint">首先，请设置本次旅行的一些基本信息。</string>
    <string name="routemaker_basicsettings_destination">目的地</string>
    <string name="routemaker_basicsettings_destination_edittext">填入城市名</string>
    <string name="routemaker_basicsettings_favoritespot_hint1">选择您在</string>
    <string name="routemaker_basicsettings_favoritespot_hint2">要游览的景点</string>
    <string name="routemaker_basicsettings_favoritespot_hint3">您的必去景点如下（已包含您在该城市收藏的景点）</string>
    <string name="routemaker_basicsettings_favoritespot_new">添加景点</string>
    <string name="routemaker_basicsettings_favoritespot_day">旅行天数</string>
    <string name="routemaker_basicsettings_favoritespot_day_default">1</string>
    <string name="routemaker_spotsettings_spot_hint">为您定制了下面的景点游览和住宿计划，可排序\n提示：调整顺序后的方案很可能不是最佳方案。</string>
    <string name="routemaker_spotsettings_spot_hint_spotadded">您可以添加一些其他的景点，点击可删除</string>
    <string name="routemaker_spotsettings_spot_hint_spot">您可以浏览整个城市的景点信息</string>
    <string name="routemaker_spotsettings_hotel_hint">为您推荐宾馆</string>
    <string name="routemaker_spotsettings_hotel_hint_change">换一个</string>
    <string name="routemaker_spotsettings_hotel_nohotel">如果您不住宾馆，请输入大致的住宿位置</string>
    <string name="routemaker_spotsettings_change_hint">更改信息后，需重新生成计划，我们会为您自动生成最佳的计划</string>
    <string name="routemaker_spotsettings_regeneration">重新生成</string>
    <string name="routemaker_basicsettings_traffic_hint">旅途中交通工具</string>
    <string name="routemaker_trafficsettings_private">自驾游/出租车</string>
    <string name="routemaker_trafficsettings_public">公共交通</string>
    <string name="routemaker_dietsettings_time">需要安排就餐的时间</string>
    <string name="routemaker_dietsettings_breakfast">早餐</string>
    <string name="routemaker_dietsettings_lunch">午餐</string>
    <string name="routemaker_dietsettings_dinner">晚餐</string>
    <string name="routemaker_dietsetting_recommend_hint">为您推荐如下的就餐计划：</string>
    <string name="routemaker_timesettings_hint">您可以微调时间安排。</string>
    <string name="routemaker_timesettings_starttime">开始时间</string>
    <string name="routemaker_timesettings_finishtime">结束时间</string>
    <string name="routemaker_finishsettings_hint">将该计划加入日程表</string>
    <string name="routemaker_finishsettings_start_date">开始日期：</string>
    <string name="routemaker_finishsettings_wrong_date">请将开始日期设置在今天之后</string>
    <string name="routemaker_spotitem_default">信息</string>
    <string name="routemaker_already_1st_step">已经是第一步</string>
    <string name="routemaker_finish">完成</string>
    <string name="routemaker_finishsettings_change_date">修改日期</string>
    <string name="routemaker_finishsettings_name">路线名称</string>


    <!--通用-->
    <string name="change">修改</string>
    <string name="title_section1">首页</string>
    <string name="title_section2">个人中心</string>
    <string name="title_section3">发现景点</string>
    <string name="title_section4_fragment1">发起旅行-基本设置</string>
    <string name="title_section4">发起旅行</string>
    <string name="title_section5">行程助手</string>
    <string name="title_section6">我的设置</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="beijing">北京</string>
    <string name="action_clear_cache">清楚缓存</string>
    <string name="search_title">景点名称</string>
    <string name="search_hint">输入景点名称</string>
    <string name="comment">评论详情</string>
    <string name="nothing">无</string>
    <string name="replace_hotel">设置为当前旅店</string>
    <string name="replace_restaurant">设置为当前饭店</string>
    <string name="satisfaction">满意度</string>
    <string name="contact">联系方式</string>
    <string name="specialty_dishes">推荐菜品</string>
</resources>
