<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/default_margin_horizontal"
                android:layout_marginRight="@dimen/default_margin_horizontal"
                android:layout_marginTop="@dimen/default_margin_vertical">

                <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/routemaker_finishsettings_hint"
                    android:layout_centerVertical="true"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true" />


            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/default_margin_horizontal"
                android:layout_marginRight="@dimen/default_margin_horizontal"
                android:layout_marginBottom="@dimen/default_margin_vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/routemaker_finishsettings_start_date"
                    android:id="@+id/textView" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toRightOf="@+id/textView"
                    android:id="@+id/routemaker_finishisettings_start_date" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/routemaker_finishisettings_start_date"
                    android:text="@string/routemaker_finishsettings_wrong_date"
                    android:textColor="@color/red"
                    android:id="@+id/routemaker_finishisettings_start_date_hint" />

                <Button
                    android:id="@+id/routemaker_finishsettings_settime"
                    android:textSize="@dimen/button_text_size"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/match_parent_rounded_rectangle_button"
                    android:text="@string/routemaker_finishsettings_change_date"
                    android:layout_alignParentBottom="true"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true">

                </Button>

            </RelativeLayout>


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                style="@style/match_parent_rounded_rectangle_button"
                android:text="@string/finish"
                android:id="@+id/routemaker_timesettings_next_step" />
        </LinearLayout>

    </LinearLayout>

</ScrollView>