<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/routemaker_spotsettings_warning_layout">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/default_margin_horizontal"
                android:layout_marginRight="@dimen/default_margin_horizontal"
                android:layout_marginTop="@dimen/default_margin_vertical"
                android:layout_marginBottom="@dimen/default_margin_vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/routemaker_spotsettings_warning"
                    android:textColor="@color/red" />
            </RelativeLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/default_margin_horizontal"
                android:layout_marginRight="@dimen/default_margin_horizontal"
                android:layout_marginTop="@dimen/default_margin_vertical"
                android:layout_marginBottom="@dimen/default_margin_vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:text="@string/routemaker_spotsettings_spot_hint"
                    android:textSize="@dimen/body_text_size" />


            </RelativeLayout>
        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="@dimen/default_margin_vertical"
            android:layout_marginLeft="@dimen/default_margin_horizontal"
            android:layout_marginRight="@dimen/default_margin_horizontal">

            <se.emilsjolander.stickylistheaders.StickyListHeadersListView
                android:dividerHeight="0dp"
                android:id="@+id/routemaker_spotsettings_spotlist"
                android:layout_width="match_parent"
                android:layout_height="300dp" />

        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RelativeLayout
                android:id="@+id/routemaker_spotsettings_spotautoadd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/default_margin_horizontal"
                android:layout_marginRight="@dimen/default_margin_horizontal"
                android:layout_marginTop="@dimen/default_margin_vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:text="@string/routemaker_spotsettings_spot_hint_spotadded"
                    android:textSize="@dimen/body_text_size" />


            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/routemaker_spotsettings_spotlist_autoadded"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/default_margin_horizontal"
                android:layout_marginRight="@dimen/default_margin_horizontal">

                <ListView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/routemaker_spotsettings_newspotlist">

                </ListView>

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/default_margin_vertical"
                android:layout_marginLeft="@dimen/default_margin_horizontal"
                android:layout_marginRight="@dimen/default_margin_horizontal"
                android:paddingTop="@dimen/default_padding">

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/default_widget_height"
                    android:background="@android:color/transparent"
                    android:drawableLeft="@drawable/ic_add"
                    android:drawableStart="@drawable/ic_add"
                    android:text="@string/routemaker_basicsettings_favoritespot_new"
                    android:textSize="@dimen/button_text_size" />

            </RelativeLayout>
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/routemaker_spotsettings_change_hint">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/default_margin_horizontal"
                android:layout_marginRight="@dimen/default_margin_horizontal"
                android:layout_marginTop="@dimen/default_margin_vertical"
                android:layout_marginBottom="@dimen/default_margin_vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/routemaker_spotsettings_change_hint"
                    android:textColor="@color/red" />
            </RelativeLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.5">

                <Button
                    style="@style/match_parent_rounded_rectangle_button"
                    android:text="@string/routemaker_spotsettings_regeneration"
                    android:id="@+id/routemaker_spotsettings_regeneration" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.5">

                <Button
                    style="@style/match_parent_rounded_rectangle_button"
                    android:text="@string/next_step"
                    android:id="@+id/routemaker_spotsettings_next_step" />
            </LinearLayout>
        </LinearLayout>

    </LinearLayout>

</ScrollView>